# rusty-http-cache-semantics

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: interactive.rs
src/: lib.rs
tests/: mod.rs  okhttp.rs  request.rs  response.rs  responsetest.rs  revalidate.rs  satisfy.rs  tests.rs  update.rs  vary.rs
tests/stub/: mod.rs  okhttp.rs  request.rs  response.rs  responsetest.rs  revalidate.rs  satisfy.rs  tests.rs  update.rs  vary.rs
