[package]
name = "http-cache-semantics"
version = "0.9.13"
description = "RFC 7234. Parses HTTP headers to correctly compute cacheability of responses, even in complex cases"
homepage = "https://lib.rs/http-cache-semantics"
repository = "https://github.com/kornelski/rusty-http-cache-semantics"
documentation = "https://docs.rs/http-cache-semantics"
license = "BSD-2-Clause"
authors = ["Kornel <kornel@geekhood.net>", "Luna Graysen <luna.g@protonmail.com>", "Douglas Greenshields <dgreenshields@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
edition = "2018"
categories = ["caching", "web-programming::http-client"]
keywords = ["http", "cache", "headers", "cache-control", "proxy"]
include = ["Cargo.toml", "README.md", "src/*.rs", "LICENSE"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
http = "0.2.4"
http-serde = { version = "1.0.2", optional = true }
serde = { version = "1.0.130", optional = true, features = ["derive"] }
reqwest = { version = "0.11.3", optional = true }

[dev-dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
serde_json = "1.0.64"

[features]
default = ["with_serde"]
with_serde = ["serde", "http-serde"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
