[package]
name = "http-cache-semantics"
version = "2.0.0"
description = "RFC 7234. Parses HTTP headers to correctly compute cacheability of responses, even in complex cases"
homepage = "https://lib.rs/http-cache-semantics"
repository = "https://github.com/kornelski/rusty-http-cache-semantics"
documentation = "https://docs.rs/http-cache-semantics"
license = "BSD-2-Clause"
authors = ["Kornel <kornel@geekhood.net>", "Luna Graysen <luna.g@protonmail.com>", "Douglas Greenshields <dgreenshields@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
categories = ["caching", "web-programming::http-client"]
keywords = ["http", "cache", "headers", "cache-control", "proxy"]
include = ["Cargo.toml", "README.md", "src/*.rs", "LICENSE"]
readme = "README.md"
rust-version = "1.64"

[dependencies]
http = "1.0.0"
http-serde = { version = "2.0.0", optional = true }
serde = { version = "1.0.192", optional = true, features = ["derive"] }
# reqwest = { version = "0.11.22", default-features = false, optional = true } # not upgraded yet
time = { version = "0.3.30", features = ["parsing", "formatting"] }

[dev-dependencies]
serde_json = "1.0.108"

[features]
default = ["with_serde"]
with_serde = ["dep:serde", "dep:http-serde"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[badges]
maintenance = { status = "passively-maintained" }
